some changes to help fix retina spacing issue, aligns some content correctly

--- a/src/components/Layout/Header/Logo/Logo.module.scss
+++ b/src/components/Layout/Header/Logo/Logo.module.scss
@@ -8,6 +8,6 @@
   }
 
   @include min-width(1000px) {
-    width: 15rem;
+    width: 14rem;
   }
 }
