--- a/src/components/Utility/BannerText/BannerText.module.scss
+++ b/src/components/Utility/BannerText/BannerText.module.scss
@@ -7,6 +7,7 @@
   width: 100%;
   max-width: $contentWidth;
   margin-top: $spaceXL;
+  align-self: flex-start;
 
   h1,
   h2 {
@@ -28,7 +29,7 @@
 
   @include min-width(1000px) {
     @include flex(column, center, flex-start);
-    margin-left: $spaceXL;
+    margin-left: 5rem;
     h1,
     h2 {
       text-align: left;
